# CoUpCookieClikker

./: ReadMe.txt
Client/: CMakeLists.txt  client.cpp
Server/: CMakeLists.txt  server.cpp
